// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component first variation with full bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation2"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[20px] md:pt-[40px] xl:pt-[60px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center text-center  justify-center xl:px-[88px]"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component first variation with full top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation2"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[40px] md:pt-[80px] xl:pt-[120px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center text-center  justify-center xl:px-[88px]"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component first variation with half bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation2"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[20px] md:pt-[40px] xl:pt-[60px] pb-[20px] md:pb-[40px] xl:pb-[60px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center text-center  justify-center xl:px-[88px]"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component first variation with half top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation2"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[20px] md:pt-[40px] xl:pt-[60px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center text-center  justify-center xl:px-[88px]"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component first variation without bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation2"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pb-0 pt-[20px] md:pt-[40px] xl:pt-[60px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center text-center  justify-center xl:px-[88px]"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component first variation without top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation2"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-0 pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center text-center  justify-center xl:px-[88px]"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component fourth variation with full bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="default"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[40px] md:pt-[80px] xl:pt-[120px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1 xl:grid-cols-2 gap-[24px] md:gap-[30px] xl:gap-[21px] items-center"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
              >
                <a
                  class="btn btn-primary"
                  href="https://prismic.io"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href="https://google.com"
                  rel="noreferrer"
                  target="_blank"
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component fourth variation with full top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="default"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[40px] md:pt-[80px] xl:pt-[120px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1 xl:grid-cols-2 gap-[24px] md:gap-[30px] xl:gap-[21px] items-center"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
              >
                <a
                  class="btn btn-primary"
                  href="https://prismic.io"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href="https://google.com"
                  rel="noreferrer"
                  target="_blank"
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component fourth variation with half bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="default"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pb-[20px] md:pb-[40px] xl:pb-[60px] pt-[40px] md:pt-[80px] xl:pt-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1 xl:grid-cols-2 gap-[24px] md:gap-[30px] xl:gap-[21px] items-center"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
              >
                <a
                  class="btn btn-primary"
                  href="https://prismic.io"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href="https://google.com"
                  rel="noreferrer"
                  target="_blank"
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component fourth variation with half top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="default"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[20px] md:pt-[40px] xl:pt-[60px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1 xl:grid-cols-2 gap-[24px] md:gap-[30px] xl:gap-[21px] items-center"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
              >
                <a
                  class="btn btn-primary"
                  href="https://prismic.io"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href="https://google.com"
                  rel="noreferrer"
                  target="_blank"
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component fourth variation without bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="default"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pb-0 pt-[40px] md:pt-[80px] xl:pt-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1 xl:grid-cols-2 gap-[24px] md:gap-[30px] xl:gap-[21px] items-center"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
              >
                <a
                  class="btn btn-primary"
                  href="https://prismic.io"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href="https://google.com"
                  rel="noreferrer"
                  target="_blank"
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component fourth variation without top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="default"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-0 pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1 xl:grid-cols-2 gap-[24px] md:gap-[30px] xl:gap-[21px] items-center"
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
              >
                <a
                  class="btn btn-primary"
                  href="https://prismic.io"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn bg-secondary"
                  href="https://google.com"
                  rel="noreferrer"
                  target="_blank"
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component second variation with full bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation4"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-0 pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px]  items-center justify-center "
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn btn-primary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex w-fit gap-x-[20px] items-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component second variation with full top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation4"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[40px] md:pt-[80px] xl:pt-[120px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px]  items-center justify-center "
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn btn-primary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex w-fit gap-x-[20px] items-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component second variation with half bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation4"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-0 pb-[20px] md:pb-[40px] xl:pb-[60px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px]  items-center justify-center "
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn btn-primary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex w-fit gap-x-[20px] items-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component second variation with half top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation4"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[20px] md:pt-[40px] xl:pt-[60px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px]  items-center justify-center "
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn btn-primary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex w-fit gap-x-[20px] items-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component second variation without bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation4"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-0 pb-0 "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px]  items-center justify-center "
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn btn-primary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex w-fit gap-x-[20px] items-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component second variation without top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation4"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-0 pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px]  items-center justify-center "
        >
          <div>
            <div
              class="mt-[20px] md:mt-[24px]"
            >
              <div
                class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] justify-center xl:justify-center"
              >
                <a
                  class="btn btn-primary"
                  href="http://google.com"
                  rel="noreferrer"
                >
                  Button Text
                </a>
                <a
                  class="btn btn-primary"
                  href=""
                >
                  Button Text
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex w-fit gap-x-[20px] items-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component third variation with full bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation3"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[20px] md:pt-[40px] xl:pt-[60px] pb-[40px] md:pb-[80px] xl:pb-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center  justify-center xl:px-[88px]"
        >
          <div
            class="grid grid-cols-1 items-center text-center xl:grid-cols-2 xl:text-start"
          >
            <div
              class=""
            />
            <div
              class="xl:ml-[54px]"
            >
              <div
                class="mt-[20px] md:mt-[24px]"
              >
                <div
                  class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
                >
                  <a
                    class="btn btn-primary"
                    href="http://google.com"
                    rel="noreferrer"
                  >
                    Button Text
                  </a>
                  <a
                    class="btn bg-secondary"
                    href=""
                  >
                    Button Text
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component third variation with full top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation3"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pb-[20px] md:pb-[40px] xl:pb-[60px] pt-[40px] md:pt-[80px] xl:pt-[120px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center  justify-center xl:px-[88px]"
        >
          <div
            class="grid grid-cols-1 items-center text-center xl:grid-cols-2 xl:text-start"
          >
            <div
              class=""
            />
            <div
              class="xl:ml-[54px]"
            >
              <div
                class="mt-[20px] md:mt-[24px]"
              >
                <div
                  class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
                >
                  <a
                    class="btn btn-primary"
                    href="http://google.com"
                    rel="noreferrer"
                  >
                    Button Text
                  </a>
                  <a
                    class="btn bg-secondary"
                    href=""
                  >
                    Button Text
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component third variation with half bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation3"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[20px] md:pt-[40px] xl:pt-[60px] pb-[20px] md:pb-[40px] xl:pb-[60px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center  justify-center xl:px-[88px]"
        >
          <div
            class="grid grid-cols-1 items-center text-center xl:grid-cols-2 xl:text-start"
          >
            <div
              class=""
            />
            <div
              class="xl:ml-[54px]"
            >
              <div
                class="mt-[20px] md:mt-[24px]"
              >
                <div
                  class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
                >
                  <a
                    class="btn btn-primary"
                    href="http://google.com"
                    rel="noreferrer"
                  >
                    Button Text
                  </a>
                  <a
                    class="btn bg-secondary"
                    href=""
                  >
                    Button Text
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component third variation with half top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation3"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-[20px] md:pt-[40px] xl:pt-[60px] pb-[20px] md:pb-[40px] xl:pb-[60px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center  justify-center xl:px-[88px]"
        >
          <div
            class="grid grid-cols-1 items-center text-center xl:grid-cols-2 xl:text-start"
          >
            <div
              class=""
            />
            <div
              class="xl:ml-[54px]"
            >
              <div
                class="mt-[20px] md:mt-[24px]"
              >
                <div
                  class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
                >
                  <a
                    class="btn btn-primary"
                    href="http://google.com"
                    rel="noreferrer"
                  >
                    Button Text
                  </a>
                  <a
                    class="btn bg-secondary"
                    href=""
                  >
                    Button Text
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component third variation without bottom padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation3"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pb-0 pt-[20px] md:pt-[40px] xl:pt-[60px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center  justify-center xl:px-[88px]"
        >
          <div
            class="grid grid-cols-1 items-center text-center xl:grid-cols-2 xl:text-start"
          >
            <div
              class=""
            />
            <div
              class="xl:ml-[54px]"
            >
              <div
                class="mt-[20px] md:mt-[24px]"
              >
                <div
                  class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
                >
                  <a
                    class="btn btn-primary"
                    href="http://google.com"
                    rel="noreferrer"
                  >
                    Button Text
                  </a>
                  <a
                    class="btn bg-secondary"
                    href=""
                  >
                    Button Text
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Component third variation without top padding renders correctly 1`] = `
<div>
  <section
    data-slice-variation="variation3"
  >
    <div
      class="px-[16px] md:px-[40px] xl:px-[80px] pt-0 pb-[20px] md:pb-[40px] xl:pb-[60px] "
    >
      <div
        class="mx-auto w-full max-w-[1280px] "
      >
        <div
          class="grid grid-cols-1  gap-y-[24px] md:gap-y-[30px] xl:gap-y-[50px] items-center  justify-center xl:px-[88px]"
        >
          <div
            class="grid grid-cols-1 items-center text-center xl:grid-cols-2 xl:text-start"
          >
            <div
              class=""
            />
            <div
              class="xl:ml-[54px]"
            >
              <div
                class="mt-[20px] md:mt-[24px]"
              >
                <div
                  class="flex flex-wrap gap-[18px] md:gap-[20px] justify-center xl:justify-start xl:pt-[12px] "
                >
                  <a
                    class="btn btn-primary"
                    href="http://google.com"
                    rel="noreferrer"
                  >
                    Button Text
                  </a>
                  <a
                    class="btn bg-secondary"
                    href=""
                  >
                    Button Text
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-center"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;
